k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - host: "gpapangel.cloudns.cl"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastapi-clip
            port:
              number: 6000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-clip
            port:
              number: 80
  tls:
    - hosts:
      - gpapangel.cloudns.cl
      secretName: tls-secret
